--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -7,3 +7,6 @@
   it uses link_to and item_path helper methods. link_to is an ActionView method and item_path became available when we
   set up our route. All view helper methods come from ActionView -->             
 <% end %>
+
+</br>
+<%= link_to "New Item", new_item_path(@item) %>
