--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,3 +1,7 @@
+<% @errors && @errors.each do |e| %> <!-- first @errors checks if there is any errors-->
+  <ul><%= e %></ul>
+<% end %>
+
 <%= form_for(@item) do |f| %> <!-- Yields an argument(f) that is an instance of the form builder class-->
   <%= f.label "Item Name:" %>
   <%= f.text_field :name %>
