--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,9 +1,20 @@
+<h3> Edit Item </h3>
+ 
 <% @errors && @errors.each do |e| %> <!-- first @errors checks if there is any errors-->
   <ul><%= e %></ul>
 <% end %>
 
-<%= form_for(@item) do |f| %> <!-- Yields an argument(f) that is an instance of the form builder class-->
+<%= render 'form' %>
+<!--
+<%= form_for(@item) do |f| %> <!-- Yields an argument(f) that is an instance of the form builder class--><!--
   <%= f.label "Item Name:" %>
   <%= f.text_field :name %>
+  <%= f.fields_for :measurements do |m| %>
+    <%= m.label "Quantity" %>
+    <%= m.number_field :quantity %>
+    <%= m.label "Units" %>
+    <%= m.text_field :unit %>
+  <% end %>
   <%= f.submit "Submit" %>
 <% end %>
+-->
