--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+    <%= link_to 'All Items', items_path %> 
+    <%= link_to 'New Item', new_item_path %>
+    <%= link_to 'New Measurement', new_measurement_path %>
+    <%= link_to 'All Measurements', measurements_path %>
     <%= yield %>
   </body>
 </html>
