--- a/app/views/measurements/_measurements.html.erb
+++ b/app/views/measurements/_measurements.html.erb
@@ -1,3 +1,3 @@
 <% measurements.each do |m| %>
-  <li> <%= m.quantity %> <%= m.unit %> </li>
+  <li><%=m.quantity%> <%=m.unit%><%=show_item_name%></li>
 <% end %>
