--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     <%= link_to 'New Item', new_item_path %>
     <%= link_to 'New Measurement', new_measurement_path %>
     <%= link_to 'All Measurements', measurements_path %>
+    <%= link_to 'My Items', user_items_path(current_user) %>
     <%= yield %>
   </body>
 </html>
