--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,20 @@
   </head>
 
   <body>
-    <%= link_to 'All Items', items_path %> 
-    <%= link_to 'New Item', new_item_path %>
-    <%= link_to 'New Measurement', new_measurement_path %>
-    <%= link_to 'All Measurements', measurements_path %>
-    <%= link_to 'My Items', user_items_path(current_user) %>
+    <% if current_user  %>
+      <%= link_to 'All Items', items_path %> 
+      <%= link_to 'New Item', new_item_path %>
+      <%= link_to 'New Measurement', new_measurement_path %>
+      <%= link_to 'All Measurements', measurements_path %>
+      <%= link_to 'My Items', user_items_path(current_user) %>
+      <%= button_to 'Log Out', logout_path, method: :post %>
+    <% else %>
+      <%= link_to 'Log In', login_path %>
+      <%= link_to 'Sign Up', signup_path %>
+    <% end %>
+
     <%= yield %>
+
   </body>
+    
 </html>
