--- a/app/views/measurements/new.html.erb
+++ b/app/views/measurements/new.html.erb
@@ -1,6 +1,4 @@
-<% @errors && @errors.each do |e| %>
-  <li><%=e%></li>
-<%end%>
+<%= render(partial: "application/errors", locals: {errors: @measurement.errors.full_messages}) %>
 
 <% if @item %>
   <h3><%= @item.name %></h3>
