--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,8 +1,6 @@
 <h3>Add a New Item</h3> 
 
-<% @errors && @errors.each do |e| %> <!-- first @errors checks if there is any errors-->
-  <li><%= e %></li>
-<% end %>
+<%= render(partial: "application/errors", locals: {errors: @item.errors.full_messages}) %>
 
 <%= render 'form' %>
 
