--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,6 @@
 <h1> Sign Up</h1>
 
-<% @errors && @errors.each do |e| %> <!-- first @errors checks if there is any errors-->
-  <li><%= e %></li>
-<% end %>
+<%= render(partial: "application/errors", locals: {errors: @user.errors.full_messages}) %>
 
 <%= form_for @user, url: signup_path do |f| %>
   <%= f.label "Username" %>
